--- a/Day01/style.css
+++ b/Day01/style.css
@@ -3,10 +3,20 @@
 /* 2. ID SELECTOR */
 #content-1 {
   background-color: beige;
+  border: 1px solid red;
+  padding: 10px;
+  margin-top: 100px;
+  margin-bottom: 100px;
 }
 
 /* 3. Class selector */
 .text-warning {
   background-color: orange;
   font-weight: bold;
+}
+
+/* 4. Child selector */
+ul > li {
+  font-size: x-large;
+  font-style: italic;
 }
